# xml.c

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  mc.yaml  run-tests.sh
.github/workflows/: ci.yaml
.mc/: rebuild.sh  ubuntu:20.04.yaml  ubuntu:22.04.yaml
src/: xml.c  xml.h
test/: CMakeLists.txt  example.c  test-attributes.xml  test-huitre39.c  test-issue-33.c  test-xml-c.c  test-xml-cpp.cpp  test-xml.c  test.xml
